# EDA_e_segmentacao_de_publico

./: EDA.ipynb  EDA_and_KMEANS.ipynb  README.md  pyproject.toml  retail_df.ipynb  shop_customer_df.ipynb
funcoes/: analise_descritiva.py
