[tool.poetry]
name = "shop-customer-data"
version = "0.1.0"
description = ""
authors = ["Ismael <ismaelhenriqueeu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
pandas = "^2.1.4"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
plotly = "^5.18.0"
nbformat = "^5.9.2"
statsmodels = "^0.14.1"
scikit-learn = "^1.3.2"
summarytools = "^0.2.3"
jinja2 = "^3.1.2"
dtype-diet = "^0.0.2"
sidetable = "^0.9.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
